--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -18,6 +19,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "1.3.2",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0"
